--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-webview": "13.13.5",
     "expo-dev-client": "~5.2.0",
     "expo-av": "~15.1.6",
-    "expo-speech": "~13.1.7"
+    "expo-speech": "~13.1.7",
+    "expo-audio": "~0.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
