--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,10 @@ yarn-error.*
 
 # local env files
 .env*.local
+.env
+
+# API Keys - NEVER COMMIT THESE
+constants/ApiKeys.ts
 
 # typescript
 *.tsbuildinfo
