--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.11",
+    "expo-audio": "~0.4.6",
+    "expo-av": "~15.1.6",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.2.0",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.1.0",
+    "expo-speech": "~13.1.7",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
@@ -39,10 +43,8 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "expo-dev-client": "~5.2.0",
-    "expo-av": "~15.1.6",
-    "expo-speech": "~13.1.7",
-    "expo-audio": "~0.4.6"
+    "tmpl": "^1.0.5",
+    "wonka": "^6.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
